data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1315.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\94\80\80\80\00\01\03\65\6e\76\0c\69\6d"
    "\70\6f\72\74\65\64\46\75\6e\63\00\00\03\82\80\80"
    "\80\00\01\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\02\40\10\00\0c\01\0b\0b"
  )
""
)